# libtorch-GPU-CNN-test-MNIST-with-Batchnorm

./: CMakeLists.txt  README.md  develop backup main (copy).cpp  file_names.csv  file_names_5_classes_500_jpg_img.csv  main (3 classes OK copy).cpp  main 3 category OK test raw (4th copy).cpp  main 5_classes.cpp  main color 56x56.cpp  main.cpp  under construction main.cpp
Experiment_files_not_work_well/: CMakeLists.txt  main (3rd copy).cpp  main (broadcast copy).cpp  main (copy dual dataset).cpp  main (copy lerning parameter for Resnet-34 model).cpp  main (copy).cpp  main (old Resnet-34).cpp  main (old1 Resnet-34).cpp  main.cpp  model (ResNet-34 plain with dropout).h  model (Resnet-34).h  model (copy 1 residual layer).h  model (copy 2 residual layer).h  model (copy Resnet-34).h  model (old Resnet-34).h  model (old1 'Resnet-34).h  model OK is training.h  model.h  model_original.h  model_x.h  test_file.csv  test_file2.csv
